<resources>
    <string name="app_name">JogFit</string>

    <string name="start_run">Mulai Jogging</string>
    <string name="stop_run">Menyimpan data Jogging</string>
    <string name="already_running">Stop Jogging untuk melihat Hasil</string>

    <string name="navigation_menu_header">JogFit</string>
    <string name="navigation_menu_open">Open</string>
    <string name="navigation_menu_close">Close</string>
    <string name="navigation_menu_map">Peta</string>
    <string name="navigation_menu_data">Hasil Jogging</string>
    <string name="navigation_menu_settings">Settings</string>

    <string name="data_longest_run">Jarak Terjauh</string>
    <string name="data_longest_time">Waktu Terlama</string>
    <string name="data_week">Mingguan</string>
    <string name="data_month">Bulanan</string>
    <string name="data_start">Waktu Mulai</string>
    <string name="data_time">Durasi</string>
    <string name="data_length">Jarak</string>

    <string name="preferences_path">app.psydd2.mdp.cw2_runningtracker.Preferences</string>
    <string name="preferences_max_zoom">maxZoom</string>
    <string name="preferences_max_zoom_run">maxZoomRun</string>
    <string name="preferences_no_points">noPoints</string>

    <string name="settings_max_zoom">Preferred Zoom</string>
    <string name="settings_max_zoom_run">Preferred Zoom While Running</string>
    <string name="settings_no_points">Distance To Keep In Frame</string>
    <string name="settings_default">(Default: <b>%1$d</b>)</string>
    <string name="settings_save">Save</string>
    <string name="settings_button_default">Restore Defaults</string>
    <string name="settings_zoom_description">Zoom Out &lt;-----   -----&gt; Zoom In</string>
</resources>
