<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="app.informatika.daz.jogfit.activities.SettingsActivity">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_margin="20dp"
		android:orientation="vertical">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="bottom"
			android:text="@string/settings_max_zoom"
			android:textAlignment="center"
			android:textColor="@color/offBlack"
			android:textSize="18sp" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="0.25"
			android:orientation="horizontal">

			<TextView
				android:id="@+id/settings_text_max_zoom"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:textAlignment="center" />

			<TextView
				android:id="@+id/settings_text_max_zoom_default"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="center_vertical"
				android:text="@string/settings_default"
				android:textAlignment="center" />
		</LinearLayout>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="0.25"
			android:text="@string/settings_zoom_description"
			android:textAlignment="center"
			android:textSize="12sp" />

		<SeekBar
			android:id="@+id/seek_max_zoom"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:max="20"
			android:min="1"
			android:progress="@integer/default_max_zoom" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="bottom"
			android:text="@string/settings_max_zoom_run"
			android:textAlignment="center"
			android:textColor="@color/offBlack"
			android:textSize="18sp" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="0.25"
			android:orientation="horizontal">

			<TextView
				android:id="@+id/settings_text_max_zoom_run"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:textAlignment="center" />

			<TextView
				android:id="@+id/settings_text_max_zoom_run_default"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="center_vertical"
				android:text="@string/settings_default"
				android:textAlignment="center" />
		</LinearLayout>

		<TextView
			android:id="@+id/textView3"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="0.25"
			android:text="@string/settings_zoom_description"
			android:textAlignment="center"
			android:textSize="12sp" />

		<SeekBar
			android:id="@+id/seek_max_zoom_run"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:max="20"
			android:min="1"
			android:progress="@integer/default_max_zoom_run" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="bottom"
			android:text="@string/settings_no_points"
			android:textAlignment="center"
			android:textColor="@color/offBlack"
			android:textSize="18sp" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="0.25"
			android:orientation="horizontal">

			<TextView
				android:id="@+id/settings_text_no_points"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:textAlignment="center" />

			<TextView
				android:id="@+id/settings_text_no_points_default"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="center_vertical"
				android:text="@string/settings_default"
				android:textAlignment="center" />
		</LinearLayout>

		<SeekBar
			android:id="@+id/seek_no_points"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:max="50"
			android:min="1"
			android:progress="@integer/default_no_points" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:orientation="horizontal">

			<Button
				android:id="@+id/btn_save"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:text="@string/settings_save" />

			<Button
				android:id="@+id/btn_default"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:text="@string/settings_button_default" />
		</LinearLayout>

	</LinearLayout>
</android.support.constraint.ConstraintLayout>
